--- a/docs/flow/uk.mdx
+++ b/docs/flow/uk.mdx
@@ -20,40 +20,40 @@
 
 3. **Вивчення слів та фраз.**
 
-   Маючи необхідний мінімум слів або слів/фраз у словнику, ви можете почати з їх вивчення на сторінці Навчання. За замовчуванням переклади доданих слів/фраз є невидимими та закриті сірим кольором. Для вивченя слів/фраз Ви можете торканням пальця відкривати переклади один за одним або зробити їх видимими всі й одразу, торкнувшись відповідної іконки:
+   Маючи необхідний мінімум слів/фраз у словнику, ви можете почати з їх вивчення на сторінці Навчання. За замовчуванням переклади доданих слів/фраз є невидимими та закриті сірим кольором. Для вивченя ви можете торканням пальця відкривати переклади один за одним або зробити їх видимими всі й одразу, торкнувшись відповідної іконки:
    ![Description](/flow/assets/learning_unblur_uk.gif)
 
    Для закріплення матеріалу ви можете перейти в режим Навчання та сумістити слово/фразу та її переклад.
 
    Вам доступні два види навчання:
 
-- Випадаючий список: оберіть в налаштуваннях кількість опцій випадаючого списку та спробуйте обрати правильну відповідь для кожного слова чи фрази.
+- **Випадаючий список**: оберіть в налаштуваннях кількість опцій випадаючого списку та спробуйте обрати правильну відповідь для кожного слова чи фрази.
   ![Description](/flow/assets/learning_dropdown_uk.jpg)
 
-- Перетягти і відпустити: затисніть пальцем іконку перетягування та перемістіть обраний переклад до відповідного слова чи фрази. Після відпускання іконки перетягування ваш переклад стає на місце слова/фрази навпроти нього, а переклад, що був перед цим, стає на місце перекладу, яий ви перетягували.
+- **Перетягти і відпустити**: затисніть пальцем іконку перетягування та перемістіть обраний переклад до відповідного слова чи фрази. Після відпускання іконки перетягування ваш переклад стає на місце слова/фрази навпроти нього, а переклад, що був перед цим, стає на місце перекладу, яий ви перетягували.
 
   ![Description](/flow/assets/match_pairs_learning.gif)
 
 4. **Тренування**
 
-Після успішного Навчання, якщо почуваєте себе впевнено, можете перевірити свої знання на сторінці Тренування. Тут вам доступні два види навчання (з таймером або без):\*\*
+Після успішного Навчання, якщо почуваєте себе впевнено, можете перевірити свої знання на сторінці Тренування. Тут вам доступні два види навчання (з таймером або без):
 
-- Обрати з: вкажіть правильний переклад, обираючи з 4 варіантів. Для даного типу Тренування доступно до 3 спроб правильно відповісти.
+- **Обрати з**: вкажіть правильний переклад, обираючи з 4 варіантів. Для даного типу Тренування доступно до 3 спроб правильно відповісти.
   ![Description](/flow/assets/training_choose_from_uk.jpg)
 
-- Обрати пару: перетягніть слово/фразу та його переклад на верх, обираючи з 4 варіантів з кожного стовбчика. Стовбчики завжди містять лише одну пару слово/фраза та переклад. Для даного типу Тренування доступно до 3 спроб правильно відповісти.
+- **Обрати пару**: перетягніть слово/фразу та його переклад на верх, обираючи з 4 варіантів з кожного стовбчика. Стовбчики завжди містять лише одну пару слово/фраза та переклад. Для даного типу Тренування доступно до 3 спроб правильно відповісти.
   ![Description](/flow/assets/training_choose_pair_uk.jpg)
 
-- Правда чи хибність: просто оберіть з двох варіантів, чи правильний переклад запропоновано для слова/фрази.
+- **Правда чи хибність**: просто оберіть з двох варіантів, чи правильний переклад запропоновано для слова/фрази.
   ![Description](/flow/assets/training_true_false_uk.jpg)
 
-- Сумістити пари: затисніть пальцем іконку перетягування та перемістіть обраний переклад до відповідного слова чи фрази. Після відпускання іконки перетягування ваш переклад стає на місце слова/фрази навпроти нього, а переклад, що був перед цим, стає на місце перекладу, яий ви перетягували.
+- **Сумістити пари**: затисніть пальцем іконку перетягування та перемістіть обраний переклад до відповідного слова чи фрази. Після відпускання іконки перетягування ваш переклад стає на місце слова/фрази навпроти нього, а переклад, що був перед цим, стає на місце перекладу, яий ви перетягували.
   ![Description](/flow/assets/match_pairs_training.gif)
 
-- Перегортання карток: для кожного слова/фрази введіть переклад та натисніть кнопку перевірки. Будьте уважні: під час відповіді враховуйте, що регістр має значення.
+- **Перегортання карток**: для кожного слова/фрази введіть переклад та натисніть кнопку перевірки. Будьте уважні: під час відповіді враховуйте, що регістр має значення.
   ![Description](/flow/assets/training_flip_cards_uk.jpg)
 
-  **Важливо зазначити, що у випадку невірної відповіді слово чи фраза з більшою вірогідністю потрапить в наступне Навчання та Тренування, таким чином Ви маєте можливість краще його запам'ятати.**
+  **Важливо зазначити, що у випадку невірної відповіді слово чи фраза з більшою вірогідністю потрапить в наступне Навчання та Тренування, таким чином ви маєте можливість краще його запам'ятати.**
 
 5. **Перегляд статистики**
 
