--- a/docs/flow/en.mdx
+++ b/docs/flow/en.mdx
@@ -18,15 +18,17 @@
 
 ---
 
-### The general application process is as follows:
+## 1. Select your native language and the language you wish to learn
 
-1. **Select your native language and the language you wish to learn**
-   ![Description](/flow/assets/add_lang_pair_en.jpg)
+![Description](/flow/assets/add_lang_pair_en.jpg)
 
-2. **Add a new word (for regular users) or phrase (for Premium users) to your Dictionary**
-   ![Description](/flow/assets/dictionary_en.jpg)
+## 2. Add a new word or phrase to your Dictionary
 
-**You can add words/phrases to the dictionary in three ways:**
+![Description](/flow/assets/dictionary_en.jpg)
+
+### Ways to add words/phrases to the dictionary
+
+You can add words/phrases to the dictionary in three ways:
 
 - By tapping the icon and entering the word or phrase to get the translation
   ![Description](/flow/assets/word_translate_en.jpg)
@@ -38,76 +40,83 @@
 - By sharing a word or phrase from another app on your device and getting the translation
   ![Description](/flow/assets/send_from_app.jpg)
 
-  To make it easier to choose the most correct translation, an indicator is available under the word, if it is completely filled in, then the translation is the most accurate:
-  ![Description](/flow/assets/translate_quality_en.webp)
+### Delete a word or phrase
 
-  When translating phrases or adding your own translation, these translations are marked with the word "Premium":
-  ![Description](/flow/assets/custom_translate_en.jpg)
+You can also delete a word/phrase in two ways:
 
-**You can also delete a word/phrase in two ways:**
-
-- finger gesture to the left:
+- Finger gesture to the left:
   ![Description](/flow/assets/remove_swipe_en.gif)
 
-- or by clicking on the basket icon. In this case, you will need to confirm the intention to delete:
+- By clicking on the basket icon and confirming the deletion:
   ![Description](/flow/assets/trash_can.jpg)
 
-3. **Learning words and phrases**
+## 3. Learning words and phrases
 
-   Once you have added enough words or phrases to your dictionary, you can start learning them on the Learning page. By default, translations of the added words or phrases are hidden and grayed out. To reveal the translations, you can either tap each one individually or show them all at once by tapping the corresponding icon:
-   ![Description](/flow/assets/learning_unblur_en.gif)
+Once you have added enough words or phrases to your dictionary, you can start learning them on the Learning page. By default, translations of the added words or phrases are hidden and grayed out. To reveal the translations, you can either tap each one individually or show them all at once by tapping the corresponding icon:
+![Description](/flow/assets/learning_unblur_en.gif)
 
-   To reinforce your learning, you can switch to Learning mode and match words or phrases with their translations.
+### Types of learning
 
-   Two types of learning are available:
+Two types of learning are available:
 
-   - **Drop-down list**: Choose the number of drop-down options in the settings and try to select the correct answer for each word or phrase.
-     ![Description](/flow/assets/learning_dropdown_en.jpg)
+- **Drop-down list**: Choose the number of drop-down options in the settings and try to select the correct answer for each word or phrase.
+  ![Description](/flow/assets/learning_dropdown_en.jpg)
 
-   - **Drag and drop**: Tap and hold the drag icon, then move the selected translation to match the word or phrase. Once released, the translation will be paired with the word or phrase, and any previous pairings will be swapped.
-     ![Description](/flow/assets/match_pairs_learning.gif)
+- **Drag and drop**: Tap and hold the drag icon, then move the selected translation to match the word or phrase.
+  ![Description](/flow/assets/match_pairs_learning.gif)
 
-4. **Training**
-   After a successful learning session, if you're feeling confident, you can test your knowledge on the Training page. There are two types of training available (with or without a timer):
+## 4. Training
 
-   - **Choose from options**: Select the correct translation from four options. For this training type, you have up to three attempts to get the correct answer.
-     ![Description](/flow/assets/training_choose_from_en.jpg)
+After a successful learning session, you can test your knowledge on the Training page.
 
-   - **Match pairs**: Drag and match the word or phrase with its correct translation by selecting from four options in each column. You have up to three attempts to complete the correct pairings.
-     ![Description](/flow/assets/training_choose_pair_en.jpg)
+### Types of training
 
-   - **True or false**: Simply decide if the translation presented is correct for the word or phrase.
-     ![Description](/flow/assets/training_true_false_en.jpg)
+- **Choose from options**: Select the correct translation from four options.
+  ![Description](/flow/assets/training_choose_from_en.jpg)
 
-   - **Match pairs (drag and drop)**: Like in the learning mode, drag and drop to pair words or phrases with their correct translations.
-     ![Description](/flow/assets/match_pairs_training.gif)
+- **Match pairs**: Drag and match the word or phrase with its correct translation.
+  ![Description](/flow/assets/training_choose_pair_en.jpg)
 
-   - **Flip cards**: Enter the correct translation for each word or phrase and press the check button. Be careful, as the case of letters matters.
-     ![Description](/flow/assets/training_flip_cards_en.jpg)
+- **True or false**: Decide if the translation presented is correct.
+  ![Description](/flow/assets/training_true_false_en.jpg)
 
-   **Note: If you answer incorrectly, the word or phrase is more likely to appear in future training sessions, helping you better memorize it.**
+- **Match pairs (drag and drop)**: Similar to learning mode, drag and drop to pair words or phrases with their correct translations.
+  ![Description](/flow/assets/match_pairs_training.gif)
 
-5. **View statistics**
-   After completing your training session, you can review your results on the Statistics page. For each training session, you can see your correct and incorrect answers, the date, the translation direction, and more.
-   ![Description](/flow/assets/statistics_en.jpg)
-   ![Description](/flow/assets/training_summary_en.jpg)
+- **Flip cards**: Enter the correct translation for each word or phrase and press the check button.
+  ![Description](/flow/assets/training_flip_cards_en.jpg)
 
-6. **Home Page Sections**
-   On the home page, the following sections are available:
+## 5. View statistics
 
-   - **Word of the Day**: A randomly selected word or phrase from your dictionary, with the option to hear the pronunciation of the word/phrase and its translation.
-     ![Description](/flow/assets/word_of_day_en.jpg)
+After completing your training session, you can review your results on the Statistics page.
+![Description](/flow/assets/statistics_en.jpg)
+![Description](/flow/assets/training_summary_en.jpg)
 
-   - **Upcoming calendar event**: Schedule a learning or training session for today or a future date, with the option to receive a reminder for this event.
-     ![Description](/flow/assets/calendar_event_en.jpg)
+## 6. Home Page Sections
 
-   - **Recent achievements**: This section displays icons for achievements, such as completing a certain number of learning or training sessions, or mastering a number of words or phrases.
-     ![Description](/flow/assets/achievements_en.jpg)
+On the home page, the following sections are available:
 
-   - **Latest training statistics**: Quickly view the results of your most recent training session.
-     ![Description](/flow/assets/latest_stats_en.jpg)
+### Word of the Day
 
-7. **Account Settings**
+A randomly selected word or phrase from your dictionary, with the option to hear the pronunciation.
+![Description](/flow/assets/word_of_day_en.jpg)
 
-   Control the display of sections on the Home Page and access other application settings, including adding or removing language pairs (Premium users only).
-   ![Description](/flow/assets/account_en.jpg)
+### Upcoming calendar event
+
+Schedule a learning or training session for today or a future date.
+![Description](/flow/assets/calendar_event_en.jpg)
+
+### Recent achievements
+
+Icons for achievements like completing learning or training sessions.
+![Description](/flow/assets/achievements_en.jpg)
+
+### Latest training statistics
+
+Quickly view the results of your most recent training session.
+![Description](/flow/assets/latest_stats_en.jpg)
+
+## 7. Account Settings
+
+Control the display of sections on the Home Page and access application settings.
+![Description](/flow/assets/account_en.jpg)
